--- a/src/FluentContract/FluentContract.csproj
+++ b/src/FluentContract/FluentContract.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="FluentResolverAndBinder.cs" />
     <Compile Include="ClassMap.cs" />
-    <Compile Include="Internals\ConstructorCompiler.cs" />
+    <Compile Include="Internals\ConstructorInfoRetriever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
