--- a/src/FluentContract/FluentContract.csproj
+++ b/src/FluentContract/FluentContract.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FluentResolverAndBinder.cs" />
+    <Compile Include="FluentMappings.cs" />
     <Compile Include="ClassMap.cs" />
     <Compile Include="Internals\ConstructorInfoRetriever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
