--- a/src/FluentContract.Test/FluentContract.Test.csproj
+++ b/src/FluentContract.Test/FluentContract.Test.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constructors.cs" />
+    <Compile Include="Converters.cs" />
     <Compile Include="Inheritance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
