added failing test for resolving null

--- a/src/FluentContract.Test/FluentContract.Test.csproj
+++ b/src/FluentContract.Test/FluentContract.Test.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicResolve.cs" />
     <Compile Include="Constructors.cs" />
     <Compile Include="Converters.cs" />
     <Compile Include="IgnoreMembers.cs" />
