added test to verify we can find renamed properties, and fixed code so test passes

--- a/src/FluentContract.Test/FluentContract.Test.csproj
+++ b/src/FluentContract.Test/FluentContract.Test.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Converters.cs" />
     <Compile Include="IgnoreMembers.cs" />
     <Compile Include="Inheritance.cs" />
+    <Compile Include="Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
