--- a/src/FluentContract/packages.config
+++ b/src/FluentContract/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" userInstalled="true" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" userInstalled="true" />
 </packages>
